--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,14 @@
       //on scroll event
       $(window).scroll( function () {
         var scroll = $(window).scrollTop();    //scroll amount
-        //if scrolling down
-          if(scroll > position){
+        //if scrolling down  and screen size is greater than 780
+          if((scroll > position) && (screen.width > 780)){
             $(".upper-nav-container").addClass("smaller")   //make header container smaller
             $(".logo-container").addClass("zoomed");       //scale down the logo
             $(".nav-bar").addClass("fixed");               //stick the nav-bar to the top
-            //if the scroll bar is at the top leveled up with the header container
-          }else if(position < $(".upper-nav-container").height()){
+            //if the scroll bar is at the top leveled up with the header container 
+            //and a screen size is greater than a tablet screen size
+          }else if(position < $(".upper-nav-container").height() && (screen.width > 780)){
             $(".upper-nav-container").removeClass("smaller")    //make header container bigger
             $(".logo-container").removeClass("zoomed");         //scale the logo up
             $(".upper-nav-container").css("transition", "height 0.5s");     //add nice transition
