--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 />
 <!--Google fonts-->
 <link
-  href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Montserrat:ital,wght@0,500;0,700;1,500&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Lora:wght@500;&family=Montserrat:ital,wght@0,500;0,700;1,500&display=swap"
   rel="stylesheet">
     
     <title>Jasamir auction</title>
