Modified footer to contain business address. Added media queries to the footer to make it responsive. Added testimonials section.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       content="Auction website"
     />
     <meta name="author" content="Denis Ladychenko" />
+    <meta name="title" content="Jasamir Auction" />
     <!--favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
